[tool.poetry]
name = "super-leak-waffle"
version = "0.1.0"
description = ""
authors = ["Valentin Famelart <valentin.famelart@gitguardian.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Script = "^2.0.6"
Flask-Cache = "^0.13.1"
Flask-Admin = "^1.6.0"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.6.1"
Flask-WTF = "^1.0.1"
Flask-RESTful = "^0.3.9"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
Werkzeug = "^2.1.2"
WTForms = "^3.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
